--- a/html/index.html
+++ b/html/index.html
@@ -119,7 +119,7 @@
                     <a href="https://github.com/m4n5ter/m4n5ter.github.io" title="Git repository" aria-label="Git repository">
                         <i id="git-repository-button" class="fa fa-github"></i>
                     </a>
-                    <a href="https://github.com/sunface/m4n5ter.github.io/edit/main/src/intro/intro.md" title="Suggest an edit" aria-label="Suggest an edit">
+                    <a href="https://github.com/sunface/m4n5ter.github.io/edit/main/src/" title="Suggest an edit" aria-label="Suggest an edit">
                         <i id="git-edit-button" class="fa fa-edit"></i>
                     </a>
                 </div>
@@ -173,7 +173,8 @@
                     <nav class="pagetoc"></nav>
                 </div>
                 <main>
-                    <h1 id="intro"><a class="header" href="#intro">Intro</a></h1>
+                    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
+<h1 id="intro"><a class="header" href="#intro">Intro</a></h1>
 <p>这是 <a href="https://github.com/m4n5ter">M4n5ter</a> 的博客</p>
 
                     <div id="giscus-container"></div>
