--- a/print.html
+++ b/print.html
@@ -176,7 +176,7 @@
 <blockquote>
 <p>这里是 <a href="https://github.com/m4n5ter">M4n5ter</a> 的博客，记录我的学习过程 ：)</p>
 </blockquote>
-<p><img src="https://raw.fastgit.org/M4n5ter/m4n5ter.github.io/main/assets/smile.jpg" alt="" /></p>
+<img title="" src="https://raw.fastgit.org/M4n5ter/m4n5ter.github.io/main/assets/smile.jpg" alt="">
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <h2 id="我的-go-从这开始"><a class="header" href="#我的-go-从这开始">我的 GO 从这开始</a></h2>
 <h3 id="the-way-to-go"><a class="header" href="#the-way-to-go">the way to go</a></h3>
