--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 <blockquote>
 <p>这里是 <a href="https://github.com/m4n5ter">M4n5ter</a> 的博客，记录我的学习过程 ：)</p>
 </blockquote>
-<img src=https://raw.fastgit.org/M4n5ter/m4n5ter.github.io/main/assets/smile.jpg>
+<img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/smile.jpg?raw=true">
 
                     <div id="giscus-container"></div>
                 </main>
