--- a/issues/docker/docker_issues.html
+++ b/issues/docker/docker_issues.html
@@ -4,35 +4,35 @@
 <head>
     <!-- Book generated using mdBook -->
     <meta charset="UTF-8">
-    <title>RUST - M4n5ter Blog</title>
+    <title>问题及解决方案 - M4n5ter Blog</title>
     <!-- Custom HTML head -->
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff" />
 
-    <link rel="icon" href="../favicon.svg">
-    <link rel="shortcut icon" href="../favicon.png">
-    <link rel="stylesheet" href="../css/variables.css">
-    <link rel="stylesheet" href="../css/general.css">
-    <link rel="stylesheet" href="../css/chrome.css">
-    <link rel="stylesheet" href="../css/print.css" media="print">
+    <link rel="icon" href="../../favicon.svg">
+    <link rel="shortcut icon" href="../../favicon.png">
+    <link rel="stylesheet" href="../../css/variables.css">
+    <link rel="stylesheet" href="../../css/general.css">
+    <link rel="stylesheet" href="../../css/chrome.css">
+    <link rel="stylesheet" href="../../css/print.css" media="print">
     <!-- Fonts -->
-    <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
-    <link rel="stylesheet" href="../fonts/fonts.css">
+    <link rel="stylesheet" href="../../FontAwesome/css/font-awesome.css">
+    <link rel="stylesheet" href="../../fonts/fonts.css">
     <!-- Highlight.js Stylesheets -->
-    <link rel="stylesheet" href="../highlight.css">
-    <link rel="stylesheet" href="../tomorrow-night.css">
-    <link rel="stylesheet" href="../ayu-highlight.css">
+    <link rel="stylesheet" href="../../highlight.css">
+    <link rel="stylesheet" href="../../tomorrow-night.css">
+    <link rel="stylesheet" href="../../ayu-highlight.css">
 
     <!-- Custom theme stylesheets -->
-    <link rel="stylesheet" href="../theme/style3.css">
+    <link rel="stylesheet" href="../../theme/style3.css">
 </head>
 
 <body>
     <!-- Provide site root to javascript -->
     <script type="text/javascript">
-        var path_to_root = "../";
+        var path_to_root = "../../";
         var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
     </script>
 
@@ -76,7 +76,7 @@
 
     <nav id="sidebar" class="sidebar" aria-label="Table of contents">
         <div class="sidebar-scrollbox">
-            <ol class="chapter"><li class="chapter-item expanded "><a href="../intro/intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded "><a href="../go/go.html"><strong aria-hidden="true">2.</strong> GO</a></li><li class="chapter-item expanded "><a href="../rust/rust.html" class="active"><strong aria-hidden="true">3.</strong> RUST</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../rust/rust_tower.html"><strong aria-hidden="true">3.1.</strong> Tower</a></li></ol></li><li class="chapter-item expanded "><a href="../issues/issues.html"><strong aria-hidden="true">4.</strong> issues and solutions</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../issues/docker/docker.html"><strong aria-hidden="true">4.1.</strong> docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../issues/docker/docker_issues.html"><strong aria-hidden="true">4.1.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="../issues/mysql/mysql.html"><strong aria-hidden="true">4.2.</strong> mysql</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../issues/mysql/mysql_issues.html"><strong aria-hidden="true">4.2.1.</strong> 问题及解决方案</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../math/math.html"><strong aria-hidden="true">5.</strong> Math</a></li></ol>
+            <ol class="chapter"><li class="chapter-item expanded "><a href="../../intro/intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded "><a href="../../go/go.html"><strong aria-hidden="true">2.</strong> GO</a></li><li class="chapter-item expanded "><a href="../../rust/rust.html"><strong aria-hidden="true">3.</strong> RUST</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../rust/rust_tower.html"><strong aria-hidden="true">3.1.</strong> Tower</a></li></ol></li><li class="chapter-item expanded "><a href="../../issues/issues.html"><strong aria-hidden="true">4.</strong> issues and solutions</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../issues/docker/docker.html"><strong aria-hidden="true">4.1.</strong> docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../issues/docker/docker_issues.html" class="active"><strong aria-hidden="true">4.1.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="../../issues/mysql/mysql.html"><strong aria-hidden="true">4.2.</strong> mysql</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../issues/mysql/mysql_issues.html"><strong aria-hidden="true">4.2.1.</strong> 问题及解决方案</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../math/math.html"><strong aria-hidden="true">5.</strong> Math</a></li></ol>
         </div>
         <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
     </nav>
@@ -113,7 +113,7 @@
                 <h1 class="menu-title">M4n5ter Blog</h1>
 
                 <div class="right-buttons">
-                    <a href="../print.html" title="Print this book" aria-label="Print this book">
+                    <a href="../../print.html" title="Print this book" aria-label="Print this book">
                         <i id="print-button" class="fa fa-print"></i>
                     </a>
                     <a href="https://github.com/m4n5ter/m4n5ter.github.io" title="Git repository" aria-label="Git repository">
@@ -174,24 +174,24 @@
                 </div>
                 <main>
                     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
-<h2 id="我的-rust-从这开始"><a class="header" href="#我的-rust-从这开始">我的 rust 从这开始</a></h2>
-<h3 id="rust-官方-the-book-的译本"><a class="header" href="#rust-官方-the-book-的译本">rust 官方 the book 的译本</a></h3>
-<p><a href="https://github.com/KaiserY/trpl-zh-cn">the book</a></p>
-<h3 id="rust-cn-社区圣经"><a class="header" href="#rust-cn-社区圣经">rust cn 社区圣经</a></h3>
-<p><a href="https://course.rs">rust course</a></p>
-<h3 id="我的-rustlings-521-版本解决方案"><a class="header" href="#我的-rustlings-521-版本解决方案">我的 rustlings 5.2.1 版本解决方案</a></h3>
-<p><a href="https://github.com/M4n5ter/rustlings-solutions">rustlings 5.2.1 解决方案</a></p>
+<h2 id="error-creating-overlay-mount-to"><a class="header" href="#error-creating-overlay-mount-to">error creating overlay mount to...</a></h2>
+<blockquote>
+<p>&quot;强制关机后再次重启机器后发现一些 docker 容器出现了 <code>error creating overlay mount to......</code> 并且无法启动&quot;</p>
+</blockquote>
+<p>该问题是与 <code>selinux</code> 相关的，有一 issue 与该问题相关<a href="https://github.com/coreos/bugs/issues/2340">#2430</a></p>
+<p>查看 <code>/etc/selinux/config</code> ，<code>selinux</code> 状态为 <code>disabled</code> ，在将其设置为 <code>permissive</code> 后重启机器解决了该问题。</p>
+<p><a href="https://github.com/coreos/bugs/issues/2340">#2430</a> 中有老哥提到禁用 <code>selinux</code> 解决了他的问题，但是我的情况是本身 <code>selinux</code> 状态就是 <code>disabled</code> ，在修改为 <code>permissive</code> 后解决了该问题。</p>
 
                     <div id="giscus-container"></div>
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
                     <!-- Mobile navigation buttons -->
-                    <a rel="prev" href="../go/go.html" class="mobile-nav-chapters previous"
+                    <a rel="prev" href="../../issues/docker/docker.html" class="mobile-nav-chapters previous"
                         title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a rel="next" href="../rust/rust_tower.html" class="mobile-nav-chapters next"
+                    <a rel="next" href="../../issues/mysql/mysql.html" class="mobile-nav-chapters next"
                         title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
@@ -201,11 +201,11 @@
         </div>
 
         <nav class="nav-wide-wrapper" aria-label="Page navigation">
-            <a rel="prev" href="../go/go.html" class="nav-chapters previous" title="Previous chapter"
+            <a rel="prev" href="../../issues/docker/docker.html" class="nav-chapters previous" title="Previous chapter"
                 aria-label="Previous chapter" aria-keyshortcuts="Left">
                 <i class="fa fa-angle-left"></i>
             </a>
-            <a rel="next" href="../rust/rust_tower.html" class="nav-chapters next" title="Next chapter"
+            <a rel="next" href="../../issues/mysql/mysql.html" class="nav-chapters next" title="Next chapter"
                 aria-label="Next chapter" aria-keyshortcuts="Right">
                 <i class="fa fa-angle-right"></i>
             </a>
@@ -216,20 +216,20 @@
     <script type="text/javascript">
         window.playground_copyable = true;
     </script>
-    <script src="../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../mark.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../searcher.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../highlight.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../book.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../mark.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../searcher.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../highlight.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../book.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" charset="utf-8">
-        var pagePath = "rust/rust.md"
+        var pagePath = "issues/docker/docker_issues.md"
     </script>
 
 
     <!-- Custom JS scripts -->
-    <script type="text/javascript" src="../assets/custom.js"></script>
-    <script type="text/javascript" src="../assets/bigPicture.js"></script>
+    <script type="text/javascript" src="../../assets/custom.js"></script>
+    <script type="text/javascript" src="../../assets/bigPicture.js"></script>
 </body>
 
 </html>
